namespace java com.kareebo.contacts.thrift.client.persistentStorage

const string SigningKey="SigningKey"
const string ClientId="ClientId"